--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^2.0.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13"
   },
   "devDependencies": {},
